# earthkit-regrid

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  pytest.ini  setup.cfg
.github/: ci-hpc-config.yml
.github/workflows/: ci.yml  legacy-ci.yml
benchmark/regrid/: test_real_data.py  test_theoretical.py
docs/: conf.py  development.rst  examples.rst  gridspec.rst  index.rst  install.rst  interpolate.rst  memory_cache.rst  references.rst  requirements.txt  set_memory_cache.rst
docs/examples/: config.ipynb  healpix_fieldlist.ipynb  index.rst  interpolation-2.ipynb  interpolation.ipynb  memory_cache.ipynb  mir_healpix_fieldlist.ipynb  mir_interpolation_types.ipynb  mir_numpy_array.ipynb  mir_octahedral_fieldlist.ipynb  numpy_arrays.ipynb  octahedral_fieldlist.ipynb  precomp_healpix_fieldlist.ipynb  precomp_numpy_array.ipynb  precomp_octahedral_fieldlist.ipynb
docs/examples/deprecated/: healpix_fieldlist.ipynb  interpolation-2.ipynb  numpy_arrays.ipynb  octahedral_fieldlist.ipynb
docs/experimental/: cache.ipynb  config_env_vars.ipynb  memory_cache.ipynb
docs/guide/: caching.rst  config.rst  index.rst  interpolate.rst  memory_cache.rst  regrid.rst
docs/guide/include/: config-get.py  config-reset.py  config-set.py
docs/guide/interpolate/: config.rst  gridspec.rst  index.rst  interpolate.rst
docs/guide/mir/: gridspec.rst  index.rst  regrid.rst  regrid_array.rst  regrid_full.rst  regrid_high.rst
docs/guide/misc/: caching.rst  config.rst  index.rst  memory_cache.rst
docs/guide/precomputed/: caching.rst  config.rst  gridspec.rst  index.rst  memory_cache.rst  regrid_array.rst  regrid_high.rst
docs/guide/regrid/: index.rst  regrid_array.rst  (+1 more)
docs/inventory/: healpix_nested.rst  healpix_ring.rst  index.rst  pre_gen_warn.rst  reduced_gg.rst
docs/release_notes/: deprecations.rst  index.rst  version_0.3_updates.rst  version_0.4_updates.rst  version_0.5_updates.rst  version_0.6_updates.rst
earthkit/regrid/: __init__.py  db.py  gridspec.py  interpolate.py  mir.py  stream.py
tests/: conftest.py  downstream-ci-requirements.txt  environment-unit-tests.yml  test_backend_mir.py  test_config.py  test_fieldlist.py  test_gridspec.py  test_interpolate.py  test_local.py  test_make_matrix.py  test_make_matrix_from_latlon.py  test_memcache.py  test_regrid.py  test_remote_index.py  test_version.py  testing.py  tmp_thread_inspect.py
tests/data/: o32.grib2
tests/interpolate/: test_matrix_interpolate.py  test_matrix_interpolate_fieldlist.py  test_matrix_local.py  test_matrix_memcache.py  test_matrix_remote_index.py
tests/inventory/: test_gridspec.py
tests/regrid/: test_backend_local_matrix.py  test_backend_matrix.py  test_backend_mir.py  test_fieldlist.py  test_mir_grid.py  test_regrid_fieldlist.py  test_regrid_grib_message.py  test_remote_index.py
tests/regrid_backends/: test_backend_local_matrix.py  test_backend_matrix.py  test_backend_matrix_memcache.py  test_fieldlist.py  test_matrix_fieldlist.py  test_matrix_xarray.py  test_remote_index.py
tests/regrid_mir/: test_mir_grid.py  test_regrid_fieldlist.py  test_regrid_grib_message.py  test_regrid_numpy.py  test_regrid_xarray.py
tests/utils/: test_cache.py  test_make_matrix.py
tools/: .gitignore  build_local_tests.py  build_matrix_db.py  local_db_conf.yaml  make-matrix.sh  make_local_db.py  make_matrix.py
tools/manage/: build_db.py  build_local_test_db.py  make_matrix.py  merge_index.py  test_db.py
tools/manage_local/: build_local_db.py
tools/subset/: eccharts_subset_db_conf.yaml  subset_db_conf.yaml  subset_remote_db.py
tools/utils/: grid.py  matrix.py
(+90 files in other folders)
