[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8.0"]

[project]
authors = [
  {name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int"}
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Operating System :: OS Independent"
]
dependencies = [
  "multiurl",
  "filelock",
  "scipy"
]
description = "ECMWF python regridding toolkit"
dynamic = ["version"]
license = {text = "Apache License Version 2.0"}
name = "earthkit-regrid"
readme = "README.md"
requires-python = ">= 3.8"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "requests"
]

[project.urls]
Documentation = "https://earthkit-regrid.readthedocs.io/"
Homepage = "https://github.com/ecmwf/earthkit-regrid/"
Issues = "https://github.com/ecmwf/earthkit-regrid.issues"
Repository = "https://github.com/ecmwf/earthkit-regrid/"

[tool.coverage.run]
branch = "true"

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = ["D1", "D200", "D205", "D400", "D401"]
convention = "numpy"

[tool.setuptools.packages.find]
include = ["earthkit.regrid"]
where = ["src/"]

[tool.setuptools_scm]
version_file = "src/earthkit/regrid/_version.py"
