[build-system]
requires = [ "setuptools>=61", "setuptools-scm>=8" ]

[project]
name = "earthkit-regrid"
description = "ECMWF python regridding toolkit"
readme = "README.md"
license = { text = "Apache License Version 2.0" }
authors = [
  { name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int" },
]
requires-python = ">=3.8"

classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = [ "version" ]
dependencies = [
  "deprecation",
  "filelock",
  "mir-python>=1.27.2.dev20250723",
  "multiurl",
  "pyyaml",
  "scipy",
]
optional-dependencies.test = [
  "earthkit-data",
  "pytest",
  "pytest-cov",
  "requests",
]
urls.Documentation = "https://earthkit-regrid.readthedocs.io/"
urls.Homepage = "https://github.com/ecmwf/earthkit-regrid/"
urls.Issues = "https://github.com/ecmwf/earthkit-regrid.issues"
urls.Repository = "https://github.com/ecmwf/earthkit-regrid/"

[tool.setuptools.packages.find]
include = [ "earthkit.regrid" ]
where = [ "src/" ]

[tool.setuptools_scm]
version_file = "src/earthkit/regrid/_version.py"

[tool.isort]
profile = "black"

[tool.coverage.run]
branch = "true"

[tool.pydocstyle]
add_ignore = [ "D1", "D200", "D205", "D400", "D401" ]
convention = "numpy"

[tool.uv]
prerelease = "allow"
